# MarketDAQ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini  run.sh
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
data/: .gitignore
data/stock_data/: test.json
doc/: class.mmd  data_list.md  sequence.mmd
doc/design/: class.mmd
include/: config.h  type.h
lib/: CMakeLists.txt
lib/timeconv/: timeconv.cpp  timeconv.h
src/: gui.cpp  gui.h  main.cpp  stock_data.cpp  stock_data.h  type.cpp  type.h
src/common/timeconv/: timeconv.cpp
src/imgui_backend/: imgui_backend.h  imgui_linux.cpp  imgui_windows.cpp
src/imgui_frontend/: gui.cpp  gui.h
src/model/: global_macro_data.h  news_data.h  stock_data.h
src/view/imgui_backend/: imgui_backend.h  imgui_linux.cpp  imgui_windows.cpp
src/view/imgui_frontend/: layout.cpp  layout.h
test/: TEST_CURL.cpp  TEST_DATA_MEMORY_LOADER.cpp  TEST_FSTREAM.cpp  TEST_IMGUI.cpp  TEST_JSON.cpp
